--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "vim/bundle/SingleCompile"]
 	path = vim/bundle/SingleCompile
 	url = git://github.com/xuhdev/SingleCompile
+[submodule "vim-indexed-search"]
+	path = vim-indexed-search
+	url = https://github.com/henrik/vim-indexed-search
