--- a/tmux.conf
+++ b/tmux.conf
@@ -32,5 +32,14 @@ bind + resize-pane -U 1
 # this is the default in tmux already
 bind : command-prompt
 
-# vi-style controls for copy mode
+# Use vim keybindings in copy mode
 setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key p paste-buffer
