--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,7 @@ bind < resize-pane -L 1
 bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
-
+source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
 # bind : to command-prompt like vim
 # this is the default in tmux already
 bind : command-prompt
@@ -35,6 +35,7 @@ bind : command-prompt
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 set -g default-terminal "screen-256color"
+
 # Setup 'v' to begin selection as in Vim
 # bind-key -T vi-copy v begin-selection
 # bind-key -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
@@ -52,3 +53,28 @@ unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys 
 unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
 unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
 
+set -g default-terminal "rxvt-unicode-256color"
+# --- colors (solarized dark)
+# default statusbar colors
+set -g status-style bg=black,fg=yellow
+
+# default window title colors
+setw -g window-status-style fg=brightblue
+# active window title colors
+setw -g window-status-current-style fg=yellow,bg=default
+#setw -g window-status-current-attr dim
+
+# pane border
+set -g pane-border-style fg=black,bg=default
+set -g pane-active-border-style fg=yellow,bg=default
+
+# command line/message text
+set -g message-style -bg=black,fg=yellow
+
+# pane number display
+set -g display-panes-active-colour yellow
+set -g display-panes-colour brightblue
+
+# clock
+setw -g clock-mode-colour yellow
+# --- end colors
