--- a/newsboat/config
+++ b/newsboat/config
@@ -6,10 +6,10 @@ download-path "/media/storage/download/newsboat/%n"
 #download-path "~/Downloads/%h/%n"
 player "mpv"
 macro , open-in-browser
-macro v set browser "xfce4-terminal -T dropdown_hidden -e 'mpv %u '"; open-in-browser ; set browser linkhandler
-#macro v set browser "xfce4-terminal -T dropdown_hidden -e 'mpv %u --fullscreen'"; open-in-browser ; set browser linkhandler
-macro b set browser "xfce4-terminal -T dropdown_hidden -e 'mpv %u --no-video'"; open-in-browser ; set browser linkhandler
-macro d set browser "xfce4-terminal -T dropdown_hidden -e '%\'youtube-dl -o ~/videos/%%\(title\)s-%%\(id\)s.%%\(ext\)s%\' %u'"; open-in-browser ; set browser linkhandler
+macro v set browser "termite -e 'mpv %u '"; open-in-browser ; set browser linkhandler
+#macro v set browser "xterm -e 'mpv %u --fullscreen'"; open-in-browser ; set browser linkhandler
+macro b set browser "termite -e 'mpv %u --no-video'"; open-in-browser ; set browser linkhandler
+macro d set browser "termite -e '%\'youtube-dl -o ~/videos/%%\(title\)s-%%\(id\)s.%%\(ext\)s%\' %u'"; open-in-browser ; set browser linkhandler
 macro w set browser "w3m"; open-in-browser ; set browser linkhandler
-macro c set browser "chromium"; open-in-browser ; set browser linkhandler
+macro c set browser "brave"; open-in-browser ; set browser linkhandler
 macro r set browser "rtv"; open-in-browser ; set browser linkhandler
